--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-    "name" : "uni-app-wechat",
-    "appid" : "__UNI__7050F70",
+    "name" : "app",
+    "appid" : "__UNI__B9D269B",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
     /* 5+App特有相关 */
     "app-plus" : {
-		"renderer": "native", //App端纯原生渲染模式
         "usingComponents" : true,
+		"renderer": "native",
         "nvueCompiler" : "uni-app",
         "compilerVersion" : 3,
         "splashscreen" : {
